# coding-challenges

hackerrank/botcleanr/: README.md  botcleanr.cabal  package.yaml
hackerrank/botcleanr/src/: Botcleanr.hs  Main.hs  stuff.hs.bak
hackerrank/botcleanr/test/: Test.hs
hackerrank/magic-square/: LICENSE  build-watch.sh  hoogle-server.sh  magic-square.cabal  package.yaml  run.sh
hackerrank/magic-square/src/: Main.hs
hackerrank/magicsquare/magic-square/: README.md
