name:                magic-square
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rksm/magic-square#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Krahn
maintainer:          robert@kra.hn
copyright:           2018 Robert Krahn
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable magic-square
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
